--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IroSphere</title>
+    <link rel="stylesheet" href="./src/style.scss">
 </head>
 
 <body>
